# svlog

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: test.yml
src/: .rustfmt.toml  cache.rs  cli.rs  cli.yaml  error.rs  logfile.rs  logline.rs  logprinter.rs  macros.rs  main.rs  util.rs
src/printer/: log_file.rs  log_filter_settings.rs  log_line.rs  log_printer.rs  log_priority.rs  log_settings.rs  mod.rs
src/util/: boottime.rs  cache.rs  mod.rs  os_times.rs  regex.rs  service.rs  settings.rs
svlog/: Cargo.toml  build.rs
svlog/src/: main.rs
svlog/src/printer/: log_file.rs  log_filter_settings.rs  log_line.rs  log_printer.rs  mod.rs
svlog/tests/: cli.rs
svlog/tests/socklog/daemon/: @10000000125647d3355f3abc.u
svlog/tests/socklog/kernel/: current
svlog/tests/test_macros/: mod.rs
svlog_cli/: Cargo.toml  README.md
svlog_cli/src/: lib.rs
svlog_util/: Cargo.toml  README.md
svlog_util/src/: lib.rs  log_priority.rs  os_times.rs  regex.rs  services.rs  svlog_error.rs
tests/: cli.rs  test_macros.rs
