[package]
name = "svlog"
version = "0.2.4"
authors = ["Pascal Huber <pascal.huber@resolved.ch>"]
edition = "2018"
description = "Display, filter and follow socklog log files on Void Linux."
readme = "README.md"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calm_io = "0.1.1"
chrono = "0.4.19"
clap = { version = "3.0.5", features = ["derive"] }
glob = "0.3.0"
globber = "0.1.3"
lazy_static = "1.4.0"
pager = "0.16.0"
rayon = "1.5.1"
regex = "1.5.4"
sys-info = "0.9.1"
