[package]
name = "svlog"
version = "0.5.3"
authors = ["Pascal Huber <pascal.huber@resolved.ch>"]
edition = "2021"
description = "Display, filter and follow socklog log files on Void Linux."
readme = "README.md"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calm_io = "0.1.1"
chrono = "0.4.19"
chrono-tz = "0.6.3"
clap = { version = "3.1.18", features = ["derive"] }
derive_more = "0.99.17"
glob = "0.3.0"
globber = "0.1.3"
lazy_static = "1.4.0"
notify = "4.0.17"
pager = "0.16.0"
rayon = "1.5.3"
regex = "1.5.6"
snafu = { version = "0.7.1", features = ["backtraces"] }
sysinfo = "0.26.1"
tzdb = "0.4.4"
