[package]
name = "svlog"
version = "0.6.2"
authors = ["Pascal Huber <pascal.huber@resolved.ch>"]
edition = "2021"
rust-version = "1.64" # cargo msrv
description = "Display, filter and follow socklog log files on Void Linux."
readme = "README.md"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calm_io = "0.1.1"
chrono = "0.4.31"
chrono-tz = "0.8.5"
clap = { version = "4.4.18"}
derive_more = "0.99.17"
glob = "0.3.1"
globber = "0.1.3"
notify = "6.1.1"
pager = "0.16.1"
rayon = "1.8.0"
regex = "1.10.2"
snafu = { version = "0.8.0" }
svlog_cli = { path = "../svlog_cli" }
svlog_util = { path = "../svlog_util" }

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.4"

[build-dependencies]
clap_mangen = "0.2.16"
svlog_cli = { path = "../svlog_cli" }
clap = { version = "4.4.18" }
