[package]
name = "svlog_util"
version = "0.6.1"
authors = ["Pascal Huber <pascal.huber@resolved.ch>"]
edition = "2021"

[dependencies]
chrono = "0.4.26"
chrono-tz = "0.8.2"
lazy_static = "1.4.0"
notify = "5.2.0"
snafu = { version = "0.7.4", features = ["backtraces"] }
regex = "1.8.4"
sysinfo = "0.28.4"
glob = "0.3.1"
