[package]
name = "svlog_util"
version = "0.6.2"
authors = ["Pascal Huber <pascal.huber@resolved.ch>"]
edition = "2021"

[dependencies]
chrono = "0.4.31"
chrono-tz = "0.8.4"
lazy_static = "1.4.0"
notify = "6.1.1"
snafu = { version = "0.7.5", features = ["backtraces"] }
regex = "1.10.2"
sysinfo = "0.30.1"
glob = "0.3.1"
